--- a/stocks/templates/stocks/partials/navbar.html
+++ b/stocks/templates/stocks/partials/navbar.html
@@ -10,7 +10,7 @@
 
             <span class="flex flex-col leading-[1.1]">
                 <span class="text-2xl font-semibold tracking-tight whitespace-nowrap">
-                    Lumeo
+                    StockinSight
                 </span>
                 <span class="text-[11px] font-light opacity-60">
                     Insights, illuminated
