minor updates and bug fixes

--- a/stocks/templates/stocks/index.html
+++ b/stocks/templates/stocks/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head_title %}
-Lumeo — Insight, illuminated
+StockinSight — Insight, illuminated
 {% endblock %}
 
 {% block content %}
