--- a/stocks/templates/stocks/stock-base.html
+++ b/stocks/templates/stocks/stock-base.html
@@ -10,15 +10,15 @@
 
 {% block maincontent %}
 <div class="space-y-5">
-    <!-- Header / Stock Info -->
-    <div class="glass-panel p-6 rounded-2xl">
-        <div class="flex justify-between items-start">
-            <div>
-                <h1 class="text-4xl font-bold text-slate-900 mb-2">
+    <div class="glass-panel p-4 md:p-6 rounded-2xl">
+
+        <div class="flex flex-col md:flex-row justify-between items-start">
+            <div class="mb-4 md:mb-0">
+                <h1 class="text-3xl md:text-4xl font-bold text-slate-900 mb-2">
                     {{ company.name }}
                 </h1>
 
-                <div class="text-slate-500 text-sm flex gap-6 items-center">
+                <div class="text-slate-500 text-xs md:text-sm flex flex-wrap gap-x-4 gap-y-2 items-center">
                     <span>
                         Ticker:
                         <span class="text-slate-800 font-medium">
@@ -41,16 +41,19 @@
 
                 </div>
             </div>
-            <div class="text-right">
-                <div class="text-3xl font-bold text-amber-600">
+            <div
+                class="text-left md:text-right w-full md:w-auto flex flex-row md:flex-col justify-between md:justify-start items-center md:items-center">
+                <div class="text-3xl font-bold text-amber-600 order-last md:order-first">
                     ₹{{ snapshot.price|default:"--"|floatformat:2| indian_comma }}
                 </div>
-                <div class="text-sm text-amber-500">
+                <div class="text-sm text-amber-500 font-bold">
                     Current Price
                 </div>
             </div>
         </div>
-        <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4 text-sm pt-2">
+        <div
+            class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-3 md:gap-4 text-sm pt-4 md:pt-2 border-t border-slate-200/50 mt-4 md:border-t-0 md:mt-0">
+
             <div>
                 <div class="text-slate-500">Revenue</div>
                 <div class="font-semibold text-slate-800">
@@ -95,7 +98,7 @@
             <div>
                 <div class="text-slate-500">Market Cap.</div>
                 <div class="font-semibold text-slate-800">
-                    ₹{{ snapshot.market_cap | to_crore |default:"--"| floatformat:2 |  indian_comma }} Crs.
+                    ₹{{ snapshot.market_cap | to_crore |default:"--"| floatformat:2 | indian_comma }} Crs.
                 </div>
             </div>
             <div>
@@ -113,7 +116,9 @@
             <div>
                 <div class="text-slate-500">52W High/Low</div>
                 <div class="font-semibold text-slate-800">
-                    {{ snapshot.high_52w |default:"--"| floatformat:0| indian_comma }} / {{ snapshot.low_52w|default:"--"|floatformat:0| indian_comma }}
+                    {{ snapshot.high_52w |default:"--"| floatformat:0| indian_comma }}
+                     / 
+                     {{ snapshot.low_52w|default:"--"|floatformat:0| indian_comma }}
                 </div>
             </div>
 
@@ -122,7 +127,6 @@
     </div>
 
 
-    <!-- Price & Volume Chart -->
     {% include 'stocks/partials/_price_volume_chart.html' %}
 
     {% include "stocks/partials/financial_table.html" with title="Quarterly Results" table_data=quarterly_data periods=quarterly_periods %}
