--- a/stocks/templates/stocks/index.html
+++ b/stocks/templates/stocks/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head_title %}
-StockInSight<span class="text-xs align-super">™</span> — Insights, illuminated
+StockInSight™ — Insights, illuminated
 {% endblock %}
 
 {% block content %}
